--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   color: #000000;
   background-color: #FFFFFF;
 
+  scroll-behavior: smooth;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
